--- a/src/main/R/badWeather/googleModel.Rmd
+++ b/src/main/R/badWeather/googleModel.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Bad weather Kelheim Demo"
 author: "Oleksandr Soboliev"
-output: pdf_document
+output: html_document
 runtime: shiny
 editor_options:
   chunk_output_type: inline
@@ -18,8 +18,9 @@ library(splines)
 library(forecast)
 library(fitdistrplus)
 library(rjson)
-rendername = "resultDemo.Rmd"
+rendername = "googleModel.Rmd"
 ```
+
 
 # Data
 
@@ -27,7 +28,7 @@ Data is taken from these resources:
 
 * Ingolstadt Weather from Meteostat [Meteostat](https://bulk.meteostat.net/v2/) 
 * Weather Description from weatherstack [Weatherstck](https://svn.vsp.tu-berlin.de/repos/shared-svn/projects/KelRide/data/badWeather/weatherstack/)
-* Mobility data is represented by number of Kexi Rides in Landkreis Kelheim (/shared-svn/projects/KelRide/data/KEXI/2021-04)
+* Mobility data is represented by google mobility report [Google mobility report](https://www.gstatic.com/covid19/mobility/Global_Mobility_Report.csv)
 * Stringency (strictness of covid policies) number is from [Oxford COVID-19 Government Response Tracker](https://covidtracker.bsg.ox.ac.uk/)
 * Holiday days are from [Feiertage](https://feiertage-api.de/)
 
@@ -56,7 +57,12 @@ json = fromJSON(file = "data/2022-10-08.json")
 json = unlist(json)
 
 #Mobility
-demand = read_delim("data/allDemandByDate2022.csv")
+demand = read_delim("data/googleMobility.csv")
+bavaria_demand = demand %>% filter(sub_region_1 == "Bavaria")
+bavaria_demand = bavaria_demand %>% dplyr::select(country_region,sub_region_1,date,residential_percent_change_from_baseline) %>%
+  rename(notAtHomeChange = residential_percent_change_from_baseline)
+
+demand = bavaria_demand
 
 #Expanding the data
 demand2022 = read_delim("data/VIA_Rides_202201_202210.csv")
@@ -131,19 +137,20 @@ result_data = demand %>% inner_join(day_description_impact, by = "date") %>% inn
 result_data = result_data %>% mutate(wday = as.character(wday(date,week_start = 1)))
 
 #Append holidays
-result_data = result_data %>% left_join(df_holidays, by = "date") %>% replace_na(list(isHoliday = FALSE,snow = 0)) #%>% filter(noRides != 0) #%>% filter(date <"2021-07-01")
+result_data = result_data %>% left_join(df_holidays, by = "date") %>% replace_na(list(isHoliday = FALSE,snow = 0)) #%>% filter(notAtHomeChange != 0) #%>% filter(date <"2021-07-01")
 
 head(result_data)
 ```
+
 
 From following plots we can see strong correlation between day of the week and number of Rides, because we want to simulate common day using MatSim it was decided to filter weekends out of resulting dataset for the model. Also because day doesn't represent weather impact, like holidays that have strong impact on mobility so they are also excluded. First 4 days are excluded, because they have 0 rides due to KeXi service start.
 
 ```{r plotting wday and holidays}
 wday_plot = ggplotly(ggplot(result_data)+
-  geom_boxplot(aes(x = wday,y = noRides)))
+  geom_boxplot(aes(x = wday,y = notAtHomeChange)))
 
 holiday_plot = ggplotly(ggplot(result_data)+
-  geom_boxplot(aes(x = isHoliday,y = noRides )))
+  geom_boxplot(aes(x = isHoliday,y = notAtHomeChange )))
 
 annotations = list( 
   list( 
@@ -170,54 +177,50 @@ annotations = list(
 subplot(wday_plot,holiday_plot) %>% layout(annotations = annotations)
 ```
 
-```{r}
-result_data = result_data %>% filter(wday!=6 & wday!=7,isHoliday == FALSE, noRides!=0)
-```
 
 After first data processing it would be helpful to find some dependencies in the data using scatter plots mapped to number of rides.
 Here is summary of end dataset 
 ```{r table}
 result_data$description = factor(result_data$description)
 result_data$season = factor(result_data$season)
-result_sum  = data.frame(c("noRides","description","tavg","tmin","tmax","prcp","snow","wspd","wpgt","pres","tsun"),c("Number of rides in day (dependent variable)","Weather description","The average air temperature in °C","The minimum air temperature in °C	","The maximum air temperature in °C","The daily precipitation total in mm","The maximum snow depth in mm","The average wind speed in km/h","The peak wind gust in km/h","The average sea-level air pressure in hPa","The daily sunshine total in minutes (m)"))
+result_sum  = data.frame(c("notAtHomeChange","description","tavg","tmin","tmax","prcp","snow","wspd","wpgt","pres","tsun"),c("Relative percentage change of hours spent out of home related to a base date (before covid)","Weather description","The average air temperature in °C","The minimum air temperature in °C	","The maximum air temperature in °C","The daily precipitation total in mm","The maximum snow depth in mm","The average wind speed in km/h","The peak wind gust in km/h","The average sea-level air pressure in hPa","The daily sunshine total in minutes (m)"))
 colnames(result_sum) = c("Variable","Description")
 knitr::kable(result_sum)
 ```
-
 
 # Finding patterns using graphic approach
 
 
 
-```{r noRides~., out.width="100%"}
+```{r notAtHomeChange~., out.width="100%"}
 
 tavg_plot = ggplotly(
   ggplot(result_data)+
-    geom_point(aes(y= noRides,x = tavg,colour = season))
-  )%>%layout(xaxis = list(title = 'tavg'), yaxis = list(title = 'noRides'))
+    geom_point(aes(y= notAtHomeChange,x = tavg,colour = season))
+  )%>%layout(xaxis = list(title = 'tavg'), yaxis = list(title = 'notAtHomeChange'))
 
 
 pres_plot= ggplotly(
   ggplot(result_data)+
-    geom_point(aes(y= noRides,x = pres,colour = season))
+    geom_point(aes(y= notAtHomeChange,x = pres,colour = season))
   
   )%>%
-  layout(xaxis = list(title = 'pres'), yaxis = list(title = 'noRides'))
+  layout(xaxis = list(title = 'pres'), yaxis = list(title = 'notAtHomeChange'))
 prcp_plot = ggplotly(
   ggplot(result_data %>% filter(prcp!=0))+
-    geom_point(aes(y= noRides,x = prcp,colour = season))
+    geom_point(aes(y= notAtHomeChange,x = prcp,colour = season))
   )%>%
-  layout(xaxis = list(title = 'prcp'), yaxis = list(title = 'noRides'))
+  layout(xaxis = list(title = 'prcp'), yaxis = list(title = 'notAtHomeChange'))
 snow_plot = ggplotly(
   ggplot(result_data %>% filter(snow!=0))+
-    geom_point(aes(y= noRides,x = snow,colour = season))
-  )%>% layout(xaxis = list(title = 'snow'), yaxis = list(title = 'noRides'))
+    geom_point(aes(y= notAtHomeChange,x = snow,colour = season))
+  )%>% layout(xaxis = list(title = 'snow'), yaxis = list(title = 'notAtHomeChange'))
 
 anno = list( 
   list( 
      x = 0.2,  
     y = 1.0,  
-    text = "noRides from avg temp",  
+    text = "notAtHomeChange from avg temp",  
     xref = "paper",  
     yref = "paper",  
     xanchor = "center",  
@@ -227,7 +230,7 @@ anno = list(
   list( 
      x = 0.75,  
     y = 1.0,  
-    text = "noRides from avg pressure",  
+    text = "notAtHomeChange from avg pressure",  
     xref = "paper",  
     yref = "paper",  
     xanchor = "center",  
@@ -237,7 +240,7 @@ anno = list(
   list( 
      x = 0.2,  
     y = 0.4,  
-    text = "noRides from avg precipitation",  
+    text = "notAtHomeChange from avg precipitation",  
     xref = "paper",  
     yref = "paper",  
     xanchor = "center",  
@@ -247,7 +250,7 @@ anno = list(
   list( 
      x = 0.75,  
     y = 0.4,  
-    text = "noRides from avg snow depth",  
+    text = "notAtHomeChange from avg snow depth",  
     xref = "paper",  
     yref = "paper",  
     xanchor = "center",  
@@ -257,10 +260,7 @@ anno = list(
 
 subplot(tavg_plot,pres_plot,prcp_plot,snow_plot,nrows = 2,titleY = TRUE,titleX = TRUE,margin = 0.1) %>% layout(annotations =anno)
 
-
 ```
-
-After looking at these plots we can barely see existing strong dependencies or clusters, but there is one conspicious fact, that only during summer number of rides falls under ~50 while other seasons have more than 50 rides.
 
 # Finding correlations
 
@@ -268,8 +268,8 @@ Correlation coefficients between two variables we calculate using cor() function
 
 ```{r correlations, warning = FALSE}
 best_pred <- result_data %>% ungroup() %>%
-  dplyr::select(-noRides,-description ,-date,-season,-noRequests,-avgEuclidianDistance_m,-avgTravelTime_s,-wday) %>%
-  map_dbl(cor,y = result_data$noRides) %>%
+  dplyr::select(-notAtHomeChange,-description ,-date,-season,-wday,-country_region,-sub_region_1,-isHoliday) %>%
+  map_dbl(cor,y = result_data$notAtHomeChange) %>%
   #map_dbl(abs) %>%
   sort(decreasing = TRUE) 
 print(best_pred)
@@ -279,17 +279,17 @@ print(best_pred)
 As a result highest absolute score in correlation have temperature(max during a day), snow(depth in mm), pressure(air pressure in hPa), stringency(strictness of covid19 policy), weather impact(highest hours of same description a day).
 
 
-Testing of null hypothesis is made for dependent noRides and independent season, description and wday
+Testing of null hypothesis is made for dependent notAtHomeChange and independent season, description and wday
 ```{r categorical variables}
 
-season_test = oneway.test(result_data$noRides~result_data$season)$p.value
-description_test = oneway.test(result_data$noRides~result_data$description)$p.value
-wday_test = oneway.test(result_data$noRides~result_data$wday)$p.value
+season_test = oneway.test(result_data$notAtHomeChange~result_data$season)$p.value
+description_test = oneway.test(result_data$notAtHomeChange~result_data$description)$p.value
+wday_test = oneway.test(result_data$notAtHomeChange~result_data$wday)$p.value
 print(c("season" =season_test,"description" =description_test,"wday" =wday_test))
 
 ```
 
-From the p-value we can see that null hypothesis can only be rejected for wday (p.value higher than 0.05), for the description and season we can't make such conclusion. But one thing that should be also tested is dependency between seasons and temperature - `r oneway.test(result_data$tavg~result_data$season)$p.value`. As we can see temperature dependent from season, so in our future model one of the variable should be dropped.
+From the p-value we can see that null hypothesis can only be rejected for description (p.value higher than 0.05), for the description and season we can't make such conclusion. But one thing that should be also tested is dependency between seasons and temperature - `r oneway.test(result_data$tavg~result_data$season)$p.value`. As we can see temperature dependent from season, so in our future model one of the variable should be dropped.
 
 # Building a model
 
@@ -298,7 +298,7 @@ After determination of significant variables we can build different models using
 ```{r omega model}
 data = result_data
 
-omega_model = lm(noRides ~ tavg+pres+stringency+snow+weather_impact*description,data = data)
+omega_model = lm(notAtHomeChange ~ tavg+pres+stringency+snow+weather_impact*description,data = data)
 
 summary(omega_model)
 
@@ -314,7 +314,7 @@ test_data = data %>% add_predictions(model = model) %>% add_residuals(model = mo
 
 
 ggplotly(ggplot(test_data %>% filter(year(date)>=2020)) +
-  geom_point(aes(x = date,y = noRides,color = "actual"))+
+  geom_point(aes(x = date,y = notAtHomeChange,color = "actual"))+
   geom_point(aes(x = date,y = pred,color = "predicted"))+
   scale_color_manual(values = colors)+
   ggtitle("Model fit without date"))
@@ -330,7 +330,7 @@ As we can see from our residuals plot our data has continuous growing trend, tha
 
 ```{r omega date residuals,out.width="100%"}
 
-omega_date_model = lm(noRides ~ tavg+pres+stringency+snow+weather_impact*description+date+season,data = data)
+omega_date_model = lm(notAtHomeChange ~ tavg+pres+stringency+snow+weather_impact*description+date+season,data = data)
 
 summary(omega_date_model)
 
@@ -339,7 +339,7 @@ model = omega_date_model
 test_data = data %>% add_predictions(model = model) %>% add_residuals(model = model) %>% mutate(error = ifelse(abs(resid)>=20,"extreme","normal"))
 
 ggplotly(ggplot(test_data %>% filter(year(date)>=2020)) +
-  geom_point(aes(x = date,y = noRides,color = "actual"))+
+  geom_point(aes(x = date,y = notAtHomeChange,color = "actual"))+
   geom_point(aes(x = date,y = pred,color = "predicted"))+
   scale_color_manual(values = colors)+
   ggtitle("Model fit with date"))
@@ -357,7 +357,7 @@ Residuals histogram
 ```{r residual destributions 1}
 
 barplot <- ggplot(test_data, aes(x = resid ))+
-  geom_histogram(aes(y = stat(density)),colour="black", fill="white", binwidth=7)+
+  geom_histogram(aes(y = stat(density)),colour="black", fill="white", binwidth=2)+
   ggtitle("Omega model residuals")
 
 ggplotly(barplot)
@@ -368,14 +368,13 @@ ggplotly(barplot)
 normal_dist = fitdistrplus::fitdist(test_data$resid,"norm")
 plot(normal_dist)
 ```
-
 # Reducing a model
 
 Let's take some variables out and see how model performs on the data and F Statistics. Low correlating variables from "Finding correlations" chapter are snow, stringency and weather_impact multiplied by description. Also there is strong correlation between average temperature and a season so our new model should contain only 1 of the predictors, because temperature have most impact on mobility and more large-scaled (season contains only 4 factors) we will take season out from new reduced_model.
 
 ```{r reduced model 1 residuals}
 
-reduced_1_model = lm(noRides ~ tavg+pres+stringency+snow+weather_impact*description+date,data = data)
+reduced_1_model = lm(notAtHomeChange ~ tavg+pres+stringency+snow+weather_impact*description+date,data = data)
 
 summary(reduced_1_model)
 
@@ -389,7 +388,7 @@ As we can see excluding variables from model doesn't make it worse residual st. 
 
 ```{r reduced model 2 residuals,message=FALSE,echo=FALSE,include=FALSE}
 
-reduced_2_model = lm(noRides ~ tavg+pres+stringency+weather_impact+description+date,data = data)
+reduced_2_model = lm(notAtHomeChange ~ tavg+pres+stringency+weather_impact+description+date,data = data)
 
 summary(reduced_2_model)
 
@@ -407,7 +406,7 @@ After few iterations we get to a model that contains only strictness of the poli
 
 ```{r reduced model 3 residuals,out.width="100%"}
 
-reduced_3_model = lm(noRides ~ season+tavg+stringency+date,data = data)
+reduced_3_model = lm(notAtHomeChange ~ season+tavg+stringency+date,data = data)
 
 summary(reduced_3_model)
 
@@ -417,7 +416,7 @@ test_data = data %>% add_predictions(model = model) %>% add_residuals(model = mo
 
 
 ggplotly(ggplot(test_data %>% filter(year(date)>=2020)) +
-  geom_point(aes(x = date,y = noRides,color = "actual"))+
+  geom_point(aes(x = date,y = notAtHomeChange,color = "actual"))+
   geom_point(aes(x = date,y = pred,color = "predicted"))+
   scale_color_manual(values = colors)+
   ggtitle("Final model fit"))
