--- a/src/main/R/badWeather/googleModel.Rmd
+++ b/src/main/R/badWeather/googleModel.Rmd
@@ -53,7 +53,7 @@ colnames(ingolstadt_weather) = c("date", "tavg", "tmin", "tmax", "prcp", "snow",
 weatherstack_kelheim = read_delim("data/Kelheim_weather_since_july_2008.csv",delim = ",")
 
 # Stringency
-json = fromJSON(file = "data/2022-10-08.json")
+json = fromJSON(file = "data/2022-11-10.json")
 json = unlist(json)
 
 #Mobility
@@ -62,7 +62,7 @@ bavaria_demand = demand %>% filter(sub_region_1 == "Bavaria")
 bavaria_demand = bavaria_demand %>% dplyr::select(country_region,sub_region_1,date,residential_percent_change_from_baseline) %>%
   rename(notAtHomeChange = residential_percent_change_from_baseline)
 
-demand = bavaria_demand
+demand = bavaria_demand %>% mutate(notAtHomeChange = -notAtHomeChange)
 
 #Expanding the data
 demand2022 = read_delim("data/VIA_Rides_202201_202210.csv")
@@ -132,7 +132,7 @@ day_description_impact= day_description_impact %>% group_by(date)%>%
 
 #####Join the data#####
 
-result_data = demand %>% inner_join(day_description_impact, by = "date") %>% inner_join(ingolstadt_weather,by = "date") %>% inner_join(df_stringency,by = "date") %>% mutate(date = as.Date(date,format = "%Y-%m-%d"))
+result_data = demand %>% left_join(day_description_impact, by = "date") %>% inner_join(ingolstadt_weather,by = "date") %>% inner_join(df_stringency,by = "date") %>% mutate(date = as.Date(date,format = "%Y-%m-%d"))
 #Also need to be added weekday
 result_data = result_data %>% mutate(wday = as.character(wday(date,week_start = 1)))
 
@@ -307,7 +307,7 @@ print(c("season" =season_test,"description" =description_test,"wday" =wday_test)
 
 ```
 
-From the p-value we can see that null hypothesis can only be rejected for description (p.value higher than 0.05), for the description and season we can't make such conclusion. But one thing that should be also tested is dependency between seasons and temperature - `r oneway.test(result_data$tavg~result_data$season)$p.value`. As we can see temperature dependent from season, so in our future model one of the variable should be dropped.
+From the p-value we can see that null hypothesis can only be rejected for description (p.value higher than 0.05), for the wday and season we can't make such conclusion. But one thing that should be also tested is dependency between seasons and temperature - `r oneway.test(result_data$tavg~result_data$season)$p.value`. As we can see temperature dependent from season, so in our future model one of the variable should be dropped.
 
 # Building a model
 
@@ -316,13 +316,13 @@ After determination of significant variables we can build different models using
 ```{r omega model}
 data = result_data %>% filter(wday !=6 & wday !=7 & isHoliday==FALSE)
 
-omega_model = lm(notAtHomeChange ~ tavg+pres+stringency+snow+weather_impact*description,data = data)
+omega_model = lm(notAtHomeChange ~ tavg+pres+stringency+snow+wspd+prcp+season,data = data)
 
 summary(omega_model)
 
 ```
 
-Low adjusted R^2 doesn't tells that our model doesn't fit the data. Let's take a look on predicted values and residuals.
+Low adjusted R^2 doesn't tells that our model doesn't fit the data well. Let's take a look on predicted values and residuals.
 
 ```{r omega residuals,out.width="100%"}
 
@@ -344,33 +344,6 @@ ggplotly(ggplot(test_data %>% filter(year(date)>=2020))+
 
 ```
 
-As we can see from our residuals plot our data has continuous growing trend, that our model doesn't consider, so taking a date variable to model can drastically improve model "quality".
-
-```{r omega date residuals,out.width="100%"}
-
-omega_date_model = lm(notAtHomeChange ~ tavg+pres+stringency+snow+weather_impact*description+date+season,data = data)
-
-summary(omega_date_model)
-
-colors = c("actual" = "blue","predicted" = "red","residuals" = "gray50","zerorides" = "purple")
-model = omega_date_model
-test_data = data %>% add_predictions(model = model) %>% add_residuals(model = model) %>% mutate(error = ifelse(abs(resid)>=20,"extreme","normal"))
-
-ggplotly(ggplot(test_data %>% filter(year(date)>=2020)) +
-  geom_point(aes(x = date,y = notAtHomeChange,color = "actual"))+
-  geom_point(aes(x = date,y = pred,color = "predicted"))+
-  scale_color_manual(values = colors)+
-  ggtitle("Model fit with date"))
-ggplotly(ggplot(test_data %>% filter(year(date)>=2020))+
-            geom_line(aes(x = date,y = resid,color = "residuals"))+
-            geom_ref_line(h = 0)+
-            scale_color_manual(values = colors)+
-            ggtitle("Residuals"))
-
-```
-
-As expected R^2 squared increased as well residual standard error is decreased to a number of 15,99. ~0.7 of R-squared is relatively high in weather statistics. To check correctness of used approach residuals have to be normally distributed.
-
 Residuals histogram
 ```{r residual destributions 1}
 
@@ -388,11 +361,11 @@ plot(normal_dist)
 ```
 # Reducing a model
 
-Let's take some variables out and see how model performs on the data and F Statistics. Low correlating variables from "Finding correlations" chapter are snow, stringency and weather_impact multiplied by description. Also there is strong correlation between average temperature and a season so our new model should contain only 1 of the predictors, because temperature have most impact on mobility and more large-scaled (season contains only 4 factors) we will take season out from new reduced_model.
+Let's take some variables out and see how model performs on the data and F Statistics. Low correlating variables from "Finding correlations" chapter are snow, stringency. Also there is strong correlation between average temperature and a season so our new model should contain only 1 of the predictors, because temperature have most impact on mobility and more large-scaled (season contains only 4 factors) we will take season out from new reduced_model.
 
 ```{r reduced model 1 residuals}
 
-reduced_1_model = lm(notAtHomeChange ~ tavg+pres+stringency+snow+weather_impact*description+date,data = data)
+reduced_1_model = lm(notAtHomeChange ~ tavg+pres+stringency+date+wspd+season,data = data)
 
 summary(reduced_1_model)
 
@@ -402,11 +375,11 @@ test_data = data %>% add_predictions(model = model) %>% add_residuals(model = mo
 
 ```
 
-As we can see excluding variables from model doesn't make it worse residual st. error remains near 16.32, we can also use anova test function from stats package to check model variable significance. But firstly we would like to get best best model with possible minimum variables. For this purpose we can inspect p-value from model summary, it says how significant separate variable in model predictions, less p-value - more significant. So we would like to exclude snow, and combined term ow weather_impact and description out of model.
+As we can see excluding variables from model doesn't make it worse residual st. error remains near 2.9, we can also use anova test function from stats package to check model variable significance. But firstly we would like to get best best model with possible minimum variables. For this purpose we can inspect p-value from model summary, it says how significant separate variable in model predictions, less p-value - more significant. So we would like to exclude snow, and combined term ow weather_impact and description out of model.
 
 ```{r reduced model 2 residuals,message=FALSE,echo=FALSE,include=FALSE}
 
-reduced_2_model = lm(notAtHomeChange ~ tavg+pres+stringency+weather_impact+description+date,data = data)
+reduced_2_model = lm(notAtHomeChange ~ tavg+pres+stringency+season,data = data)
 
 summary(reduced_2_model)
 
@@ -424,7 +397,7 @@ After few iterations we get to a model that contains only strictness of the poli
 
 ```{r reduced model 3 residuals,out.width="100%"}
 
-reduced_3_model = lm(notAtHomeChange ~ season+stringency+date,data = data)
+reduced_3_model = lm(notAtHomeChange ~ season+stringency+season+tavg,data = data)
 
 summary(reduced_3_model)
 
@@ -458,9 +431,6 @@ ggplotly(barplot)
 ```
 
 
-```{r}
-test_data = test_data %>% filter(resid>=-50)
-```
 
 ```{r, out.width="100%",warning=FALSE}
 normal_dist = fitdistrplus::fitdist(test_data$resid,"norm")
